--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,7 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/firstzeroenergy/firstzeroenergy.r-universe.dev
 	branch = HEAD
+[submodule "fastgeojson"]
+	path = fastgeojson
+	url = https://github.com/firstzeroenergy/fastgeojson
